Fix players heads on mobiles

--- a/front/sass/media.sass
+++ b/front/sass/media.sass
@@ -940,6 +940,12 @@
   .land
     &__players
       bottom: -170px
+@media screen and (max-width: 810px) and (max-height: 970px) and (orientation: portrait)
+  .land
+    &__logo, &__title, &__bonus
+      transform: scale(1)
+      transform-origin: top
+      margin-top: 0px
 @media screen and (max-width: 770px) and (max-height: 1030px) and (orientation: portrait)
   .land
     &__logo, &__title, &__bonus
@@ -1180,12 +1186,20 @@
   .land
     &__logo
       margin-top: 0
-@media screen and (max-width: 430px) and (max-height: 750px) and (orientation: portrait)
+@media screen and (max-width: 430px) and (max-height: 752px) and (orientation: portrait)
   .land
     &__players
       bottom: 20px
     &__text
       line-height: 13px
+@media screen and (max-width: 430px) and (max-height: 730px) and (orientation: portrait)
+.land
+    &__players
+      bottom: 0px
+@media screen and (max-width: 403px) and (max-height: 680px) and (orientation: portrait)
+  .land
+    &__players
+      bottom: -20px
 @media screen and (max-width: 399px) and (max-height: 670px) and (orientation: portrait)
   .land
     &__players
@@ -1205,6 +1219,14 @@
       bottom: 30px
     &__title
       margin-bottom: 6px
+@media screen and (max-width: 375px) and (max-height: 650px) and (orientation: portrait)
+  .land
+    &__players
+      bottom: 20px
+@media screen and (max-width: 375px) and (max-height: 630px) and (orientation: portrait)
+  .land
+    &__players
+      bottom: 0
 @media screen and (max-width: 375px) and (max-height: 553px) and (min-height: 520px) and (orientation: portrait)
   .land
     &__logo, &__bonus, &__title, &__btn
